Version 0.1.1
- Removed unused components from the standalone version

Version 0.1
- Initial release